# lucid-sonic-dreams

./: .gitignore  COLAB_COMPATIBILITY_PLAN.md  R3GAN_INTEGRATION_PLAN.md  README.md  pyproject.toml  setup.py
examples/: lucid_sonic_dreams_colab.ipynb
lucidsonicdreams/: __init__.py  helper_functions.py  main.py
